<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <PreferenceCategory
        android:title="@string/pref_category_dex2oat">

        <SwitchPreference
            android:key="pref_key_compiler_debugmode"
            android:title="@string/pref_compiler_debugmode"
            android:summary="@string/pref_compiler_debugmode_summary"
            android:defaultValue="true" />

        <ListPreference
            android:defaultValue="-1"
            android:entries="@array/pref_compiler_threads"
            android:entryValues="@array/pref_compiler_threads_values"
            android:key="pref_key_compiler_threads"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_compiler_threads" />

        <SwitchPreference
            android:key="pref_key_compiler_launch_activity"
            android:title="@string/pref_compiler_launch_activity"
            android:summary="@string/pref_compiler_launch_activity_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_codelib">

        <Preference
            android:defaultValue=""
            android:selectAllOnFocus="true"
            android:singleLine="false"
            android:title="@string/pref_title_codelib_import"
            android:summary="@string/pref_summary_codelib_import"
            android:key="pref_key_codelib_import" />

        <ListPreference
            android:defaultValue="-1"
            android:entries="@array/pref_compiler_threads"
            android:entryValues="@array/pref_compiler_threads_values"
            android:key="pref_key_codelib_selection"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_codelib_selection"
            android:summary="@string/pref_summary_codelib_selection"
            />

        <SwitchPreference
            android:key="pref_key_compiler_inject_codelib"
            android:title="@string/pref_compiler_inject_codelib"
            android:summary="@string/pref_compiler_inject_codelib_summary"
            android:defaultValue="true" />

        <SwitchPreference
            android:key="pref_key_compiler_abort_multidex"
            android:title="@string/pref_compiler_abort_multidex"
            android:summary="@string/pref_compiler_abort_multidex_summary"
            android:defaultValue="false" />

        <SwitchPreference
            android:key="pref_key_compiler_special_app_compart_settings"
            android:title="@string/pref_compiler_special_app_compart"
            android:summary="@string/pref_compiler_special_app_compart_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_category_apk">

        <SwitchPreference
        android:key="pref_key_compiler_replace_base_apk"
        android:title="@string/pref_compiler_replace_base_apk"
        android:summary="@string/pref_compiler_replace_base_apk_summary"
        android:defaultValue="false" />

    <SwitchPreference
        android:key="pref_key_compiler_backup_merged_apk"
        android:title="@string/pref_compiler_backup_merged_apk"
        android:summary="@string/pref_compiler_backup_merged_apk_summary"
        android:defaultValue="false" />

    <SwitchPreference
        android:key="pref_key_compiler_backup_original_apk"
        android:title="@string/pref_compiler_backup_original_apk"
        android:summary="@string/pref_compiler_backup_original_apk_summary"
        android:defaultValue="false" />

    </PreferenceCategory>



    <!-- This preference simply launches an intent when selected. Use this UI sparingly, per
         design guidelines. -->
    <!--<Preference android:title="@string/pref_title_system_sync_settings">-->
        <!--<intent android:action="android.settings.SYNC_SETTINGS" />-->
    <!--</Preference>-->

</PreferenceScreen>
